--- a/ProjetoA3_BlueWorld/src/main/java/ProjetoA3_BlueWorld/telas/LoginTela.form
+++ b/ProjetoA3_BlueWorld/src/main/java/ProjetoA3_BlueWorld/telas/LoginTela.form
@@ -27,11 +27,6 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="ver">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Pichau\OneDrive\&#xc1;rea de Trabalho\20241_usjt_psc_noite_intro_git\ProjetoA3_BlueWorld\src\main\resources\visualizar.png"/>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="verMouseClicked"/>
       </Events>
@@ -42,11 +37,6 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="nver">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Pichau\OneDrive\&#xc1;rea de Trabalho\20241_usjt_psc_noite_intro_git\ProjetoA3_BlueWorld\src\main\resources\escondido.png"/>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nverMouseClicked"/>
       </Events>
@@ -56,7 +46,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JTextField" name="loginTextField">
+    <Component class="javax.swing.JTextField" name="emailTextField">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="sansserif" size="18" style="1"/>
@@ -64,7 +54,6 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Usu&#xe1;rio"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
