--- a/ProjetoA3_BlueWorld/src/main/java/ProjetoA3_BlueWorld/telas/TelaPrincipal.form
+++ b/ProjetoA3_BlueWorld/src/main/java/ProjetoA3_BlueWorld/telas/TelaPrincipal.form
@@ -117,11 +117,6 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JToggleButton" name="Confirmar">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Pichau\OneDrive\&#xc1;rea de Trabalho\20241_usjt_psc_noite_intro_git\ProjetoA3_BlueWorld\src\main\resources\Confirmar2.png"/>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ConfirmarActionPerformed"/>
       </Events>
@@ -132,11 +127,6 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JToggleButton" name="Voltar">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Pichau\OneDrive\&#xc1;rea de Trabalho\20241_usjt_psc_noite_intro_git\ProjetoA3_BlueWorld\src\main\resources\Voltar2.png"/>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="VoltarActionPerformed"/>
       </Events>
@@ -147,11 +137,6 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JToggleButton" name="Limpar">
-      <Properties>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Pichau\OneDrive\&#xc1;rea de Trabalho\20241_usjt_psc_noite_intro_git\ProjetoA3_BlueWorld\src\main\resources\Limpar2.png"/>
-        </Property>
-      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LimparActionPerformed"/>
       </Events>
@@ -164,7 +149,7 @@
     <Component class="javax.swing.JLabel" name="Fundo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\Pichau\OneDrive\&#xc1;rea de Trabalho\20241_usjt_psc_noite_intro_git\ProjetoA3_BlueWorld\src\main\resources\TelaCadastroRio.png"/>
+          <Image iconType="3" name="/TelaCadastroRio.png"/>
         </Property>
         <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
