--- a/ProjetoA3_BlueWorld/src/main/java/ProjetoA3_BlueWorld/telas/LoginTela.form
+++ b/ProjetoA3_BlueWorld/src/main/java/ProjetoA3_BlueWorld/telas/LoginTela.form
@@ -27,6 +27,11 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JLabel" name="nver">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/escondido.png"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="nverMouseClicked"/>
       </Events>
@@ -37,6 +42,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="ver">
+      <Properties>
+        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+          <Image iconType="3" name="/visualizar.png"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="verMouseClicked"/>
       </Events>
